Changed Makefile to look for SDK_148

--- a/Makefile copy
+++ b/Makefile copy
@@ -156,9 +156,17 @@ ifdef DIRETTA_SDK_PATH
 else
     # Search for SDK in common locations (newest version first)
     SDK_SEARCH_PATHS = \
+        ../DirettaHostSDK_147_19 \
+        ../DirettaHostSDK_147 \
         ../DirettaHostSDK_148 \
+        ./DirettaHostSDK_147_19 \
+        ./DirettaHostSDK_147 \
         ./DirettaHostSDK_148 \
+        $(HOME)/DirettaHostSDK_147_19 \
+        $(HOME)/DirettaHostSDK_147 \
         $(HOME)/DirettaHostSDK_148 \
+        /opt/DirettaHostSDK_147_19 \
+        /opt/DirettaHostSDK_147 \
         /opt/DirettaHostSDK_148
 
     SDK_PATH = $(firstword $(foreach path,$(SDK_SEARCH_PATHS),$(wildcard $(path))))
